[tool.poetry]
name = "repl_python3_BSU-V7"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
python-dotenv = "^0.19.2"
enquiries = "^0.1.0"
PySimpleGUI = "^4.55.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
